--- a/NbgHrMvc/appsettings.json
+++ b/NbgHrMvc/appsettings.json
@@ -6,9 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
+  "AllowedHosts": "*"
+    ,
 
   "ConnectionStrings": {
-    "NbgSqlConnection": "Data Source=localhost;Initial Catalog=nbgHr2021;Integrated Security=True"
+    "NbgSqlConnection": "Data Source=localhost;Initial Catalog=nbgHr2022;Integrated Security=True"
   }
 }
